--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,12 +3,13 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "prebuild": "npm i --include=dev && dfx generate backend",
     "build": "vite build",
     "dev": "vite"
   },
   "dependencies": {
-    "@dfinity/agent": "2.2.0",
+    "@dfinity/agent": "2.4.1",
+    "@dfinity/auth-client": "2.4.1",
+    "@dfinity/vetkeys": "0.4.0",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
